# AndroidBoardTest-

./: settings.gradle
ThunderJni/: CMakeLists.txt  build.gradle  proguard-rules.pro
ThunderJni/src/main/: AndroidManifest.xml
ThunderJni/src/main/cpp/: Application.mk
ThunderJni/src/main/cpp/android/: Java_HardwareHelper.cpp  Java_HardwareHelper.h
ThunderJni/src/main/cpp/include/: adaptor.h  adaptor_define.h
ThunderJni/src/main/cpp/tools/: JniHelper.cpp  JniHelper.h
ThunderJni/src/main/java/com/thunder/ktv/thunderjni/manager/: LibsManager.java
ThunderJni/src/main/java/com/thunder/ktv/thunderjni/thunderapi/: TDHardwareHelper.java
ThunderJni/src/main/java/com/thunder/ktv/thunderjni/thunderapi/util/: StringUtil.java
ThunderJni/src/main/java/com/thunder/ktv/thunderjni/until/: Logger.java
ThunderJni/src/main/res/values/: strings.xml
app/: build.gradle
app/libs/: ijkplayer-armv7a-debug.aar  ijkplayer-java-debug.aar
app/src/androidTest/java/com/thunder/ktv/androidboardtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/thunder/android/thunderaidl/: ISystemControlCallback.aidl  ISystemControlManager.aidl
app/src/main/java/com/thunder/ktv/androidboardtest/: AppHelper.java  MainActivity.java  PT2033Helper.java  SystemControlClientHelper.java
app/src/main/java/com/thunder/ktv/androidboardtest/function/: AbsFunction.java  ActionBase.java  BassFun.java  BassSeekFun.java  BassSwitchFun.java  ButtonFun.java  DefaultInfo.java  EchoFun.java  EditorFun.java  FrontPanelFun.java  FunctionBase.java  FunctionInfo.java  GpioFun.java  GpioSetFun.java  IBindFrontPanel.java  IFunction.java  KtvBtLineFun.java  MastVolumer.java  MicFun.java  MusicLevelFun.java  PlayerVolumeFun.java  PowerFun.java  RolandCodeManage.java  RolandEffectFun.java  RolandPrmFun.java  SeekFun.java  SpeakerOutputFun.java  UartAction.java  UartCode.java  UartFunction.java  VersionFun.java  VideoControlFun.java
app/src/main/java/com/thunder/ktv/androidboardtest/function/basefun/: AbsFunction.java  ButtonListFun.java  IFrontPanelDoAction.java  SeekFun.java  SwitchListFun.java
app/src/main/java/com/thunder/ktv/androidboardtest/player/: THPlayer.java
app/src/main/java/com/thunder/ktv/androidboardtest/player/listener/: IThunderPlayerListener.java
app/src/main/java/com/thunder/ktv/androidboardtest/uartfun/: AbsFunction.java  ButtonFun.java  RolandCodeManage.java  RolandPrmFun.java  SeekFun.java
app/src/main/java/com/thunder/ktv/androidboardtest/view/: MyListViewAdapter.java
app/src/main/res/layout/: activity_main.xml  view_rv_item.xml  view_rv_item_button.xml  view_rv_item_seek.xml  view_rv_item_switch.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/thunder/ktv/androidboardtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
